# pmind-veo-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
src/: __init__.py  config.py  server.py
src/services/: __init__.py  video_generation.py
src/utils/: __init__.py  common.py  generation_manager.py  generation_worker.py  logging.py  veo_client.py
